--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/directives/identicons-grid.js"></script>
         <!-- endbuild -->
 
         <!-- bower:js -->
