Implement `identiconUrl.fromUserId` service method
This encapsulates the logic for converting a GitHub user's ID into
the URL for their identicon.

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/identicons-grid.js"></script>
+        <script src="scripts/services/identicon-url.js"></script>
         <!-- endbuild -->
 
         <!-- bower:js -->
