--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/identicons-grid.js"></script>
         <script src="scripts/services/identicon-url.js"></script>
+        <script src="scripts/controllers/organization.js"></script>
         <!-- endbuild -->
 
         <!-- bower:js -->
